--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
     <hr>
     <h3 class="skill_set">What can i do?</h3>
     <div class="codiv">
-      <img class="coding_img" src="https://cdn-icons-png.flaticon.com/512/1005/1005141.png" alt="coding">
+      <img class="coding_img" src="image/coding.png" alt="coding">
       <h4>Programming and stuff.</h4>
       <p>
         I started getting into the field of coding at the of 12 because I wanted to make my own website where I can sell products which i made myself from then, I never looked back and my curious mind kept me going.
       </p>
     </div>
     <div class="skilliv">
-      <img class="skilli" src="https://cdn-icons.flaticon.com/png/512/2706/premium/2706804.png?token=exp=1653194591~hmac=35ca0486cca82f2eff5bc972c4286576" alt="skill">
+      <img class="skilli" src="image/cricket.png" alt="skill">
       <h4>Sports </h4>
       <p>
         I love to try different sports. But, being an Indian I love Cricket more than any other other sport. I also like to play Football and badminton but not many people play it here so I just don't get to play it.
       </p>
     </div>
     <div class="skilled">
-      <img class="chess" src="https://cdn-icons.flaticon.com/png/512/3411/premium/3411074.png?token=exp=1653230345~hmac=4b861569e0aa6dd5df51cd82d1c84b04" alt="chess">
+      <img class="chess" src="image/chess.png" alt="chess">
       <h4>Skill Learning</h4>
       <p>I try new stuff and see if they suit my circle; if it does then I get involed into it a lot till I master it.Like I started to learn coding this way and to play chess and cube until I once did it in 46s. </p>
     </div>
