grammar and img change

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
       <img class="coding_img" src="image/coding.png" alt="coding">
       <h4>Programming and stuff.</h4>
       <p>
-        I started getting into the field of coding at the of 12 because I wanted to make my own website where I can sell products which i made myself from then, I never looked back and my curious mind kept me going.
+        I started getting into the field of coding at the age of 12 because I wanted to make my own website where I can sell products which i made myself from then, I never looked back and my curious mind kept me going.
       </p>
     </div>
     <div class="skilliv">
-      <img class="skilli" src="image/cricket.png" alt="skill">
-      <h4>Sports </h4>
+      <img class="skilli" src="https://cdn-icons.flaticon.com/png/512/3227/premium/3227053.png?token=exp=1656591322~hmac=554805ce37094d34d3bcda6283f2378b" alt="skill">
+      <h4>Reading </h4>
       <p>
-        I love to try different sports. But, being an Indian I love Cricket more than any other other sport. I also like to play Football and badminton but not many people play it here so I just don't get to play it.
+      I love to read books. Well that is what I think my life is meant for. Learing through reading has got me where I am and I think I will continue this. Books of various different subjects and people I like to read.  
       </p>
     </div>
     <div class="skilled">
